--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans: "Inconsolata", sans-serif;
-  --font-inter: "Inter", sans-serif;
+  --font-sans: "Inter", sans-serif;
 }
 
 :root {
